Estilo para tabla de reportes

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
   }
+  @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200&family=Noto+Serif+Telugu:wght@500&family=Secular+One&display=swap');
+  h4{
+    font-family: 'Noto Serif Telugu', serif;
+    font-weight: bold;
+  }
   /* width */
   ::-webkit-scrollbar {
     width: 5px;
@@ -40,8 +45,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    max-width: 14%;
-    height: 100%;
+    max-width: 13%;
     background: linear-gradient(0deg, #002953 5%, #005cb9 15%, #499bec 30%, #76baff 100%);
     mix-blend-mode: normal;
     box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.42);  
@@ -80,10 +84,9 @@
     font-size: 20px;
   }
   main {
-    width: 87%;
-    max-height: 100%;
-    padding: 10px;
-  }
+    width: 86%;
+    padding: 30px;
+}
   .conted-option {
     width: 100%;
     margin-top: 20px;
@@ -173,18 +176,16 @@
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.9);
   }
-  main{
-      width: 86%;
-      padding: 30px;
-      overflow-x: hidden;
-  }
+
   main .conted-section{
+      display: flex;
       border-radius: 15px;
-      border: 2px solid #d9d9d980;
+      border: 2px solid #d9d9d932;
       box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.312);
-      background-color: white;
       width: 100%;
-      min-height: 99.6%;
+      height: 99.6%;
+      padding: 10px;
+      background-color: #d9d9d932;
   }
   
   @media screen and (max-width: 1400px) {
