--- a/public/css/table.css
+++ b/public/css/table.css
@@ -4,6 +4,16 @@
     justify-content: space-between;
     text-align: center;
 }
+.box-table-report{
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    /* overflow: scroll; */
+    background-color: white;
+    overflow: hidden;
+}
 .box-table-reports{
     display: flex;
     flex-direction: column;
@@ -14,7 +24,7 @@
     background-color: white;
     overflow: hidden;
 }
-.box-table-reports .card-header{
+.card-header{
     display: flex;
     justify-content: space-between;
     align-items: center
