--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
   }
-  @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200&family=Noto+Serif+Telugu:wght@500&family=Secular+One&display=swap');
-  h4{
-    font-family: 'Noto Serif Telugu', serif;
-    font-weight: bold;
+  @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200&family=Lato:wght@700&family=Noto+Serif+Telugu:wght@500&family=Secular+One&display=swap');  
+  h2,h3,h6{
+    font-family: 'Lato', sans-serif;
+    font-weight: bolder;
+    margin: 0;
   }
   /* width */
   ::-webkit-scrollbar {
@@ -48,7 +49,7 @@
     max-width: 13%;
     background: linear-gradient(0deg, #002953 5%, #005cb9 15%, #499bec 30%, #76baff 100%);
     mix-blend-mode: normal;
-    box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.42);  
+    box-shadow: 6px 0px 10px rgba(0, 0, 0, 0.42);  
     overflow: auto;
   }
   header .box-user {
@@ -180,14 +181,17 @@
   main .conted-section{
       display: flex;
       border-radius: 15px;
-      border: 2px solid #d9d9d932;
-      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.312);
+      border: 1px solid #d9d9d9c2;
       width: 100%;
       height: 99.6%;
       padding: 10px;
-      background-color: #d9d9d932;
   }
-  
+  .box-body{
+    min-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
   @media screen and (max-width: 1400px) {
   
     header .box-user .info-user .img-user {
