--- a/public/css/table.css
+++ b/public/css/table.css
@@ -1,9 +1,4 @@
-.box-body{
-    min-width: 100%;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
+
 .box-table-report{
     display: flex;
     flex-direction: column;
@@ -11,7 +6,6 @@
     width: 100%;
     height: 100%;
     /* overflow: scroll; */
-    background-color: white;
     overflow: hidden;
 }
 .box-table-reports{
@@ -21,13 +15,19 @@
     min-width: 49%;
     height: 100%;
     /* overflow: scroll; */
-    background-color: white;
     overflow: hidden;
 }
 .card-header{
     display: flex;
     justify-content: space-between;
-    align-items: center
+    align-items: center;
+    background-color: transparent;
+    padding: 12px 16px;
+}
+.accountant{
+    font-size: 15px;
+    margin: 0;
+    max-width: 100px;
 }
 .table {
     margin: 0;
