--- a/public/css/form.css
+++ b/public/css/form.css
@@ -43,6 +43,8 @@ input, select{
 .container .box-info .row{
     /* background-color: beige; */
     margin: 6px 0px;
+    align-items: flex-end;
+
 }
 .container .box-info .row h4{
     text-align: left;
