--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,250 +1,171 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-  }
-  @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200&family=Lato:wght@700&family=Noto+Serif+Telugu:wght@500&family=Secular+One&display=swap');  
-  h2,h3,h6{
-    font-family: 'Lato', sans-serif;
-    font-weight: bolder;
-    margin: 0;
-  }
-  /* width */
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 10px rgb(255, 255, 255);
-    border-radius: 10px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: rgba(0, 115, 255, 0.497);
-    border-radius: 10px;
-  }
-  a:hover{
-    color: white;
-  }
-  ol, ul{
-    padding-left: 0px;
-    margin-bottom:0px;
-    list-style: none;
-  }
-  p{
-    font-family: 'Archivo', sans-serif;
-  }
-  body {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    overflow: hidden;
-  }
-  header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 13%;
-    background: linear-gradient(0deg, #002953 5%, #005cb9 15%, #499bec 30%, #76baff 100%);
-    mix-blend-mode: normal;
-    box-shadow: 6px 0px 10px rgba(0, 0, 0, 0.42);  
-    overflow: auto;
-  }
-  header .box-user {
-      width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  header .box-user p{
-    font-size: 20px;
-    color: white ;
-  }
-  header .box-user .img-header {
-    margin: 50px 14px 25px 14px;
-  }
-  header .box-user .info-user {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  header .box-user .info-user .img-user {
-    width: 150px;
-    height: 150px;
-    margin: auto auto 15px auto;
-    border-radius: 50%;
-    border: 5px solid rgba(139, 139, 139, 0.493);
-  }
-  header .box-user .info-user p {
-    margin: auto;
-    width: 80%;
-    text-align: center;
-    font-size: 20px;
-  }
-  main {
-    width: 86%;
-    padding: 30px;
 }
-  .conted-option {
-    width: 100%;
-    margin-top: 20px;
-  }
-  .nav_a {
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    transition: 0.2s;
-    cursor: pointer;
-    width: 100%;
-  }
-  .nav_a .box-option {
+h1,h2,h3,h4,h5{
+    margin: 0;
+}
+hr{
+    margin: auto;
+    width: 95%;
+    border: 2px solid rgb(0, 0, 0);
+}
+li{
+    list-style-type: none;
+}
+.bg-a{
+    background: linear-gradient(90deg, white 33% , #005691 66%, #004A7C 100%);
+}
+body{
+    background-color: rgba(155, 162, 255, 0.20);
+}
+body .navbar{
+    height: 48px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.249);
+}
+.navbar .section{
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 10px 15px;
-  }
-  .nav_a .box-option i {
-    width: 40px;
-    height: 40px;
-    margin: auto 19.25px auto 0px;
-    transition: 0.5s;
+    padding: 0px 10px;
+    height: 100%;
+    /* border: 1px solid red; */
+}
+.navbar .logo{
+ justify-content: center;
+ width: 13%;   
+}
+.navbar .user-setings{
+    width: 87%;
+}
+body .box-container{
+    /* border: 1px solid red; */
+    display: flex;
+    overflow: hidden;
+}
+body .box-container .sider-bar{
+    /* border: 1px solid orange; */
+    height: 100%;
+    width: 12%;
+    padding: 20px 10px;
+
+}
+.sider-bar .container{
+    overflow: auto;
+    background-color: rgba(0, 74, 124, 0.5);
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px 1px rgb(87, 87, 87);
+
+}
+.sider-bar .container .row{
+    /* border: 1px solid red; */
+}
+.sider-bar .container .row nav{
+    width: 100%;
+    padding: 0px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 50px;
+    /* border: 1px solid green; */
+}
+.sider-bar .container .row nav ul{
+    padding: 0;
+    margin: 0;
+    width: 90%;
+}
+.sider-bar .container .row nav ul li a{
+    text-decoration: none;
+}
+.option-nav{
+    width: 100%;
+    margin:10px 0px ;
     padding: 10px;
-  }
-  .nav_a .box-option p {
+    border-radius: 10px;
+    display: flex;
+    font-family: 'Roboto Condensed', sans-serif;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    color: #F1F2EB;
+    transition: .5s;
+    font-size: 14px;
+}
+.option-nav .icon{
+    text-align: center;
+    width: 15%;
+}
+.option-nav .section{
+    transition: .5s;
+    width: 80%;
+}
+.option-nav .section p{
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 0px;
-  }
-  .conted-option nav ul{
-    padding: 0px;
-  }
-  .conted-option nav ul li:hover > a .box-option i {
-    text-align: center;
-    margin: auto 19.25px auto 5px;
-    background-color: rgb(33, 33, 33, 0.7);
-  }
-  .conted-option nav ul li div{
+    margin: 0;
+}
+.option-nav:hover{
+    background-color: #2e5a77;
+}
+.option-nav:hover .icon i{
+    font-weight: bold;
+}
+.option-nav:hover .section{
+    width: 75%;
+}
+
+body .box-container .contentd{
+    padding: 10px;
+    height: 100%;
+    width: 88%;
+    overflow: auto;
+    /* background-color: black; */
+}
+
+body .box-container .contentd .box-content{
+    background-color: rgb(255, 255, 255);
+    border-radius: 7px;
+    width: 100%;
+    padding: 5px;
+}
+.contentd .box-content .box-title{
+    display: flex;
+    padding: 10px 5px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 7px;
+}
+.contentd .box-content .box-info{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-  }
-  .conted-option nav ul li > div{
-    display: flex;
-    height: 0px;
-    transition: .8s;
-  }
-  .conted-option nav ul li > .disabled{
-    height: 0px;
-  }
-  .conted-option nav ul li > .active{
-    height: auto;
-  }
-  .conted-option nav ul li > div .box-option:hover i {
-    text-align: center;
-    margin: auto 19.25px auto 5px;
-    background-color: rgb(33, 33, 33, 0.5);
-  }
-  .conted-option nav ul li > div > div{
-    width: 76%;
-    background-color: rgba(255, 255, 255,.4);
-    border-radius: 30px 0px 0px 30px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-  }
-  .conted-option nav ul > .active  a:hover .box-option i {
-    text-align: center;
-    margin: auto 19.25px auto 5px;
-    background-color: rgb(33, 33, 33, 0.4);
-  }
-  header .setting{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.49);
-    transition: .5s;
-  }
-  header .setting:hover{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.9);
-  }
-
-  main .conted-section{
-      display: flex;
-      border-radius: 15px;
-      border: 1px solid #d9d9d9c2;
-      width: 100%;
-      height: 99.6%;
-      padding: 10px;
-  }
-  .box-body{
-    min-width: 100%;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+    justify-content: space-around;
+    box-shadow:0px 0px 5px 1px rgb(221, 221, 221);
+    border-radius:3px;
+    margin: 20px;
 }
-  @media screen and (max-width: 1400px) {
-  
-    header .box-user .info-user .img-user {
-    height: 100px;
-    width: 100px;
+@media (max-width: 834px) {
+    body .box-container .contentd .example{
+        background-color: red;
+        width: 100%;
+        height: 100%;
     }
-    .nav_a{
-      font-size: 15px;
+    body .box-container .sider-bar{
+    width: 10%;
     }
-    .nav_a .box-option p{
-      font-size: 15px;
+    .option-nav{
+        justify-content: center;
     }
-    .nav_a .box-option{
-      padding: 5px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      }
-    .nav_a .box-option i{
-      margin: auto 7px auto 0px;
+    .option-nav .icon{
+        text-align: center;
+        width: 50%;
     }
-    .conted-option nav ul li:hover > a .box-option i {
-      margin: auto 7px auto 5px;
+    .option-nav:hover .section,
+    .option-nav > .section, 
+    .section p {
+        width: 0%;
     }
-    .conted-option nav ul > div > div{
-      width: 80%;
-    }
-  }
-  @media screen and (max-width: 1179px) {
-    header{
-      max-width:80px ;
-    }
-    header .box-user .info-user {
-    overflow: hidden;
-    height: 0px;
-    border: 0;
-    }
-    .nav_a {
-      font-size: 20px;
-    }
-    .conted-option nav ul li:hover a .box-option i {
-      margin: auto auto auto 10px;
-    }
-    .conted-option nav ul > .active  a:hover .box-option i {
-      margin: auto auto auto 10px;
-    }
-    .nav_a .box-option{
-      justify-content: center;
-    }
-    .nav_a .box-option i{
-      margin:0px;
-    }
-    .nav_a .box-option p{
-      overflow: hidden;
-      width: 0px;
-    }
-  }
+
+}
