--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,9 +4,11 @@
     margin: 0;
     padding: 0;
 }
-h1,h2,h3,h4,h5{
+h1,h2,h3,h4,h5,h6{
     margin: 0;
+    font-family: 'Roboto Condensed', sans-serif;
 }
+
 hr{
     margin: auto;
     width: 95%;
